# V.Rainbomizer

./: CMakeLists.txt  PatternList.txt  README.md  config.toml
.github/workflows/: main.yml
cmake/: DebugImgui.cmake  DebugServer.cmake  Minhook.cmake  fmt.cmake  imgui.cmake  implot.cmake  libuv.cmake  nlohmannJson.cmake  uWebSockets.cmake  zlib.cmake
data/: BigVehicles.txt  CutsceneModelsPeds.txt  CutsceneModelsProps.txt  FailMessages.txt  LicensePlates.txt  Missions.txt  NSFW_Components.txt  NSFW_Models.txt  README.md  Ramps.txt  RespawnCoords.txt  VehiclePatterns.txt  VoiceLines.txt  WeaponModels.txt  WeaponWeights.txt  update.sh
data/Timecyc/: Alternative.txt  Default.txt  SkyAndColours.txt  SkyOnly.txt
lib/: CARGB.hh  CAmbientModelSets.cc  CAmbientModelSets.hh  CCredits.cc  CCredits.hh  CDispatchService.hh  CEntity.hh  CHandlingDataMgr.cc  CHandlingDataMgr.hh  CHud.cc  CHud.hh  CItemInfo.cc  CItemInfo.hh  CLoadingScreens.cc  CLoadingScreens.hh  CMath.hh  CModelIndices.cc  CModelIndices.hh  CModelInfo.cc  CModelInfo.hh  CPed.cc  CPed.hh  CPools.cc  CPools.hh  CPopulation.hh  CScaleformMgr.hh  CShaderLib.cc  CShaderLib.hh  CStreaming.cc  CStreaming.hh  CTask.cc  CTask.hh  CText.cc  CText.hh  CTheScripts.cc  CTheScripts.hh  CTimecycle.cc  CTimecycle.hh  CVehicle.cc  CVehicle.hh  (+32 more)
lib/ModUtils/: Trampoline.h
lib/Patterns/: Patterns.cpp  Patterns.hh
lib/injector/: hooking.hpp  injector.hpp
lib/memory/: GameAddress.hh  Memory.cc  Memory.hh  MemorySignature.hh  Pattern.hh  PatternList.hh  RuntimePattern.cc  RuntimePattern.hh
scripts/: README.md  extract_patterns.py  order.html  speech_extractor.py  ttd-parser.py  voice-line-gen.py
src/: colours.cc  common.cc  traffic.cc  vehicles.cc  weapons.cc
src/colours/: colours.cc  lights.cc  weather.cc  weather_Timecycle.hh
src/common/: PatchFilterDLC2612.cc  common.cc  common.hh  config.cc  config.hh  configDefault.hh  config_Macros.hh  events.cc  events.hh  logger.cc  logger.hh  minhook.hh  mods.cc  mods.hh  parser.hh  streaming.hh  ysc.hh  ysc_Hooks.hh
src/debug/: actions.cc  actions.hh  backend.cc  backend.hh  base.cc  base.hh  config.cc  config.hh  logger.hh  motion.hh  peds.cc  pools.cc  savedata.cc  scripts.cc  scripts.hh  server.cc  server.hh  shaders.cc  stats.cc  timecycle.cc  ttd.hh
src/debug/html/: dashboard.html
src/exceptions/: exceptions_BackTrace.cc  exceptions_Mgr.cc  exceptions_Mgr.hh  exceptions_Registers.cc  exceptions_Stack.cc  exceptions_Threads.cc  exceptions_Vars.cc  exceptions_Vars.hh
src/misc/: colours.cc  controls.cc  crashes.cc  credits.cc  cutscenes.cc  news.cc  ramps.cc  respawns.cc  scaleform.cc  scenes.cc  texts.cc  weather.cc  weather_Timecycle.hh
src/mission/: missions.cc  missions.hh  missions_Cmds.cc  missions_Cmds.hh  missions_Code.cc  missions_Code.hh  missions_Data.hh  missions_Flow.cc  missions_Flow.hh  missions_Funcs.hh  missions_Globals.hh  missions_Order.cc  missions_Order.hh  missions_PlayerSwitch.cc  missions_PlayerSwitch.hh  missions_YscUtils.cc  missions_YscUtils.hh  peds.cc
src/peds/: clothes.cc  clothes_Queue.hh  peds.cc  peds.hh  peds_AnimalExperiments.cc  peds_AnimalFixes.cc  peds_AnimalFixes.hh  peds_AnimalMotion.cc  peds_AnimalMotion.hh  peds_Compatibility.cc  peds_Compatibility.hh  peds_MainFixes.cc  peds_MainFixes.hh  peds_PlayerFixes.hh  peds_Projectiles.cc  peds_SkellyFixes.cc  peds_Stats.hh  peds_Streaming.hh  peds_Swapper.hh
src/sounds/: music.cc  sfx.cc  voicelines.cc
src/vehicles/: appearance.cc  appearance_Colours.hh  appearance_Config.hh  appearance_Upgrades.hh  cargens.cc  dispatch.cc  handling.cc  traffic.cc  vehicle_cacheMgr.cc  vehicle_cacheMgr.hh  vehicle_common.cc  vehicle_common.hh  vehicle_patterns.cc  vehicle_patterns.hh  vehicles.cc
src/weapons/: stats.cc  weapons.cc  weapons_equipMgr.cc  weapons_equipMgr.hh
